# ScoreGen

./: CMakeLists.txt
.github/workflows/: lint.yml
ScoreGen.Tests/: generateMusicXML.Test.cpp
include/: generateMusicXML.h
src/: dsp.cpp
src/backend/: ScoreGen.cpp  generateMusicXML.cpp
src/frontend/: main.js  record.html  record.js  styles.css
